Fix bug where posts were getting cut off

--- a/src/includes/topic.less
+++ b/src/includes/topic.less
@@ -35,6 +35,7 @@
   .wrapper();
   
   .topic-body {
+    overflow: visible;
     @avatar-width: 45px;
     @padding-left: 21px;
     @reserved-width: @avatar-width + @padding-left;
